--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "babel-preset-es2015-without-strict": "0.0.4",
     "babel-register": "^6.26.0",
+    "fullpage.js": "^3.0.8",
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^6.0.0",
     "gulp-babel": "^6.1.2",
@@ -33,7 +34,6 @@
     "gulp-uglify": "^3.0.0",
     "gulp-util": "^3.0.8",
     "jquery": "^3.4.1",
-    "lazysizes": "^5.2.0",
-    "pagepiling.js": "^1.5.6"
+    "lazysizes": "^5.2.0"
   }
 }
